group 'it.unicam.cs.pa.pa2122.jlogo105504'
version '1.0-SNAPSHOT'

subprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    // make sure that the project is compiled with Java version 17
    java.sourceCompatibility JavaVersion.VERSION_17
    java.targetCompatibility JavaVersion.VERSION_17

    dependencies {
        compileOnly 'org.jetbrains:annotations:23.0.0'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    }

    tasks.withType(JavaCompile).each {
        it.options.compilerArgs.add('--enable-preview')
    }

    tasks.withType(JavaExec) {
        jvmArgs('--enable-preview')
        standardInput = System.in
    }

    test {
        useJUnitPlatform()
        jvmArgs("--enable-preview")
    }
}